--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,7 @@
 [package]
-name = "webapp"
+name = "blog"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 rocket = "0.5.1"
-rocket_contrib = "0.4.11"
-
-[default]
-address = "127.0.0.1"
-port = 7878
